--- a/client/src/elements/schema-editor/schema-editor-boolean.html
+++ b/client/src/elements/schema-editor/schema-editor-boolean.html
@@ -1,7 +1,9 @@
-<template class="schema-editor-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
+<template
+  class="schema-editor-input ${showNotifications ? 'schema-editor-input--with-notifications' : ''}"
+>
   <div class="q-form__checkbox">
     <label>
-      <input type="checkbox" checked.bind="data" change.delegate="change()">
+      <input type="checkbox" checked.bind="data" change.delegate="change()" />
       <span>${schema["title"] & toolT}</span>
     </label>
   </div>
