--- a/client/src/elements/schema-editor/schema-editor-url.html
+++ b/client/src/elements/schema-editor/schema-editor-url.html
@@ -1,10 +1,18 @@
-<template class="schema-editor-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
+<template
+  class="schema-editor-input ${showNotifications ? 'schema-editor-input--with-notifications' : ''}"
+>
   <label>
     ${schema["title"] & toolT}
     <span show.bind="required">
       <span>- </span>
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
     </span>
-    <input type="url" placeholder.to-view="options.placeholder || '' & toolT" required.bind="required" value.bind="data" keyup.delegate="change() & debounce:800">
+    <input
+      type="url"
+      placeholder.to-view="options.placeholder || '' & toolT"
+      required.bind="required"
+      value.bind="data"
+      keyup.delegate="change() & debounce:800"
+    />
   </label>
 </template>
