Revert "Rename class schema-editor-notification-column to schema-editor-input--with-notifications"
This reverts commit b2247b9a65b68936b108a034c84e844ee943b64d.

--- a/client/src/elements/schema-editor/schema-editor-base64image.html
+++ b/client/src/elements/schema-editor/schema-editor-base64image.html
@@ -1,6 +1,4 @@
-<template
-  class="schema-editor-input ${showNotifications ? 'schema-editor-input--with-notifications' : ''}"
->
+<template class="schema-editor-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
   <require from="./schema-editor-base64image.css"></require>
   <label>
     <span>${schema["title"] & toolT}</span>
@@ -8,13 +6,7 @@
       <span>- </span>
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
     </span>
-    <input
-      type="file"
-      accept="image/png"
-      class="schema-editor-base64image__input"
-      required.bind="required"
-      change.delegate="handleChange($event)"
-    />
-    <img if.bind="data" src="${data}" style="height: 30px;" />
+    <input type="file" accept="image/png" class="schema-editor-base64image__input" required.bind="required" change.delegate="handleChange($event)">
+    <img if.bind="data" src="${data}" style="height: 30px;">
   </label>
 </template>
