--- a/client/src/elements/schema-editor/schema-editor-textarea.html
+++ b/client/src/elements/schema-editor/schema-editor-textarea.html
@@ -1,17 +1,10 @@
-<template
-  class="schema-editor-input ${showNotifications ? 'schema-editor-input--with-notifications' : ''}"
->
+<template class="schema-editor-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
   <label>
     ${schema["title"] & toolT}
     <span show.bind="required">
       <span>- </span>
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
     </span>
-    <textarea
-      value.bind="data"
-      placeholder.to-view="options.placeholder || '' & toolT"
-      required.bind="required"
-      input.delegate="change() & debounce:800"
-    ></textarea>
+    <textarea value.bind="data" placeholder.to-view="options.placeholder || '' & toolT" required.bind="required" input.delegate="change() & debounce:800"></textarea>
   </label>
 </template>
