--- a/client/src/elements/schema-editor/schema-editor-color.html
+++ b/client/src/elements/schema-editor/schema-editor-color.html
@@ -1,6 +1,4 @@
-<template
-  class="schema-editor-input ${showNotifications ? 'schema-editor-input--with-notifications' : ''}"
->
+<template class="schema-editor-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
   <require from="./schema-editor-color.css"></require>
   <label>
     ${schema["title"] & toolT}
@@ -8,11 +6,6 @@
       <span>- </span>
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
     </span>
-    <input
-      type="color"
-      value.bind="data"
-      required.bind="required"
-      change.delegate="change() & debounce:500"
-    />
+    <input type="color" value.bind="data" required.bind="required" change.delegate="change() & debounce:500">
   </label>
 </template>
