--- a/client/src/elements/schema-editor/schema-editor-geojson-point.html
+++ b/client/src/elements/schema-editor/schema-editor-geojson-point.html
@@ -1,46 +1,23 @@
 <template>
   <require from="./schema-editor-object"></require>
   <require from="./schema-editor-geojson-point.css"></require>
-  <p
-    class="q-text q-text--error"
-    if.bind="showLoadingError"
-    t="editor.failedToLoadEditorPart"
-  ></p>
-  <div
-    class="schema-editor-input--with-notifications"
-    style="height: 400px;"
-    ref="mapContainer"
-  ></div>
+  <p class="q-text q-text--error" if.bind="showLoadingError" t="editor.failedToLoadEditorPart"></p>
+  <div class="schema-editor-notification-column" style="height: 400px;" ref="mapContainer"></div>
   <div>
     <schema-editor-object
       schema.bind="schema.properties.properties"
       data.two-way="data.properties"
       change.bind="change"
-      show-notifications.bind="showNotifications"
-    ></schema-editor-object>
+      show-notifications.bind="showNotifications"></schema-editor-object>
 
-    <div
-      class="lat-lng-input ${showNotifications ? 'schema-editor-input--with-notifications' : ''}"
-    >
+    <div class="lat-lng-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
       <label>
         Latitude
-        <input
-          type="number"
-          step="any"
-          value.bind="data.geometry.coordinates[1] | forceNumber"
-          input.delegate="updateMarker(true)"
-          required.bind="isRequired(schema.properties.geometry, 'coordinates')"
-        />
+        <input type="number" step="any" value.bind="data.geometry.coordinates[1] | forceNumber" input.delegate="updateMarker(true)" required.bind="isRequired(schema.properties.geometry, 'coordinates')">
       </label>
       <label>
         Longitude
-        <input
-          type="number"
-          step="any"
-          value.bind="data.geometry.coordinates[0] | forceNumber"
-          input.delegate="updateMarker(true)"
-          required.bind="isRequired(schema.properties.geometry, 'coordinates')"
-        />
+        <input type="number" step="any" value.bind="data.geometry.coordinates[0] | forceNumber" input.delegate="updateMarker(true)" required.bind="isRequired(schema.properties.geometry, 'coordinates')">
       </label>
     </div>
   </div>
