--- a/client/src/elements/schema-editor/schema-editor-number.html
+++ b/client/src/elements/schema-editor/schema-editor-number.html
@@ -1,21 +1,11 @@
-<template
-  class="schema-editor-input ${showNotifications ? 'schema-editor-input--with-notifications' : ''}"
->
+<template class="schema-editor-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
   <label>
     ${schema["title"] & toolT}
     <span show.bind="required">
       <span>- </span>
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
     </span>
-    <input
-      type="number"
-      placeholder.to-view="options.placeholder || '' & toolT"
-      required.bind="required"
-      value.bind="data | forceNumber"
-      step.bind="options.step"
-      min.bind="schema.minimum"
-      max.bind="schema.maximum"
-      keyup.delegate="change() & debounce:800"
-    />
+    <input type="number" placeholder.to-view="options.placeholder || '' & toolT" required.bind="required" value.bind="data | forceNumber"
+      step.bind="options.step" min.bind="schema.minimum" max.bind="schema.maximum" keyup.delegate="change() & debounce:800">
   </label>
 </template>
