--- a/client/src/elements/schema-editor/schema-editor-link.html
+++ b/client/src/elements/schema-editor/schema-editor-link.html
@@ -7,5 +7,5 @@
     </span>
     <input type="url" placeholder.to-view="options.placeholder || '' & toolT" required.bind="required" value.bind="data.url" ref="urlInput"
       keyup.delegate="handleUrlChange() & debounce:800">
-    <label>
+  </label>
 </template>
