--- a/client/src/elements/schema-editor/schema-editor-array.html
+++ b/client/src/elements/schema-editor/schema-editor-array.html
@@ -4,29 +4,30 @@
   <legend>
     ${schema.title & toolT}
   </legend>
-  <div class="schema-editor-array__entry-border ${showNotifications ? 'schema-editor-input--with-notifications' : ''}"></div>
   <div if.bind="data" repeat.for="entry of data" class="schema-editor-array__entry" style="z-index: ${data.length - $index}">
     <div class="schema-editor-array__entry-container">
-      <div class="schema-editor-array__collapsecontrol" if.bind="options.expandable && isEntryAvailable($index) & async">
-        <button-secondary icon="expand" size="small" if.bind="collapsedStates[$index] !== 'expanded'" click.delegate="expand($index)"></button-secondary>
-        <button-secondary icon="collapse" size="small" if.bind="collapsedStates[$index] === 'expanded'" click.delegate="collapse($index)"></button-secondary>
+      <div class="schema-editor-array__control ${showNotifications ? 'schema-editor-input--with-notifications' : ''}">
+        <div class="schema-editor-array__collapsecontrol" if.bind="options.expandable && isEntryAvailable($index) & async">
+          <button-secondary icon="expand" size="small" if.bind="collapsedStates[$index] !== 'expanded'" click.delegate="expand($index)"></button-secondary>
+          <button-secondary icon="collapse" size="small" if.bind="collapsedStates[$index] === 'expanded'" click.delegate="collapse($index)"></button-secondary>
 
-        <span class="q-text" if.bind="options.expandable.itemLabelProperty && entryLabels[$index]" innerhtml.bind="entryLabels[$index]"></span>
-        <span class="q-text" if.bind="!options.expandable.itemLabelProperty || !entryLabels[$index]">${$index + 1}</span>
-        <div class="schema-editor-array__entry-actions ${showNotifications ? 'schema-editor-input--with-notifications' : ''}">
+          <span class="q-text" if.bind="options.expandable.itemLabelProperty && entryLabels[$index]" innerhtml.bind="entryLabels[$index]"></span>
+          <span class="q-text" if.bind="!options.expandable.itemLabelProperty || !entryLabels[$index]">${$index + 1}</span>
+          <div class="schema-editor-array__entry-actions">
+            <button-tertiary if.bind="!$first" icon="up" click.delegate="moveElementUp($index)" size="small"></button-tertiary>
+            <button-tertiary if.bind="!$last" icon="down" click.delegate="moveElementDown($index)" size="small"></button-tertiary>
+            <button-secondary class="schema-editor-array__button" click.delegate="deleteElement($index)">
+              ${'editor.arrayEntryRemove' & t: getArrayEntryOption($index)}
+            </button-secondary>
+          </div>
+        </div>
+        <div class="schema-editor-array__entry-actions" if.bind="!options.expandable">
           <button-tertiary if.bind="!$first" icon="up" click.delegate="moveElementUp($index)" size="small"></button-tertiary>
           <button-tertiary if.bind="!$last" icon="down" click.delegate="moveElementDown($index)" size="small"></button-tertiary>
           <button-secondary class="schema-editor-array__button" click.delegate="deleteElement($index)">
             ${'editor.arrayEntryRemove' & t: getArrayEntryOption($index)}
           </button-secondary>
         </div>
-      </div>
-      <div class="schema-editor-array__entry-actions ${showNotifications ? 'schema-editor-input--with-notifications' : ''}" if.bind="!options.expandable">
-        <button-tertiary if.bind="!$first" icon="up" click.delegate="moveElementUp($index)" size="small"></button-tertiary>
-        <button-tertiary if.bind="!$last" icon="down" click.delegate="moveElementDown($index)" size="small"></button-tertiary>
-        <button-secondary class="schema-editor-array__button" click.delegate="deleteElement($index)">
-          ${'editor.arrayEntryRemove' & t: getArrayEntryOption($index)}
-        </button-secondary>
       </div>
       <schema-editor-wrapper class="schema-editor-array__schema-editor-wrapper" if.bind="(collapsedStates[$index] === 'expanded' || !options.expandable) && isEntryAvailable($index) & async"
         schema.bind="dataItemsSchemas[$index]" data.two-way="data[$index]" change.bind="$parent.handleChange" no-object-title="true"
