--- a/client/src/pages/tasks.html
+++ b/client/src/pages/tasks.html
@@ -2,6 +2,9 @@
   <require from="./tasks.css"></require>
   <require from="../elements/schema-editor/schema-editor"></require>
   <q-bar if.bind="user.isLoggedIn" router.bind="router">
+    <a slot="back-button" class="q-bar__back" route-href="route: index">
+      <button-secondary icon="back" icon-size="medium"></button-secondary>
+    </a>
     <icon-logo class="index__logo" if.bind="enoughNewItems" slot="logo" click.delegate="reloadItems()"></icon-logo>
     <icon-m class="index__logo" if.bind="!enoughNewItems" slot="logo" click.delegate="reloadItems()"></icon-m>
     <language-switcher slot="language-switcher"></language-switcher>
@@ -9,19 +12,18 @@
   </q-bar>
   <section class="tasks">
     <div id="tasks--sidebar">
-      <ul id="tasks--list">
-         <li repeat.for="task of tasks"><a click.delegate="loadTask(task)" class="q-text-small">${task.name}</a></li>
-      </ul>
+      <h2>Tasks</h2>
+      <a repeat.for="task of tasks" click.delegate="loadTask(task)" class="q-text-small">${task.name}</a>
     </div>
-    <div id="tasks--input">
-      <p class="s-font-sans s-font-title">${selectedTask.name}</p>
+    <div id="tasks--input" if.bind="selectedTask.name !== undefined">
+      <h2>${selectedTask.name}</h2>
       <schema-editor schema.bind="selectedTask.schema || {}" data.bind="taskInput"></schema-editor>
-      <button-primary click.delegate="executeTask(task)" icon="">Ausführen</button-primary>
+      <button-primary click.delegate="executeTask(task)">Ausführen</button-primary>
     </div>
     <div id="tasks--output">
       <div if.bind="output.type==='json'">
         <div repeat.for="item of output.data">
-          <p class="s-font-sans s-font-title">${item.label}</p>
+          <h2>${item.label}</h2>
           <div>
             <pre class="tasks--output--json" style="">${item.content | json:2}</pre>
           </div>
