--- a/client/src/pages/tasks.html
+++ b/client/src/pages/tasks.html
@@ -22,7 +22,7 @@
     <form ref="form" class="q-form" id="tasks__input" validate>
       <h2>${selectedTask.name}</h2>
       <schema-editor schema.bind="selectedTask.schema || {}" data.bind="taskInput"></schema-editor>
-      <button-primary type="submit" click.delegate="executeTask(task)">${'tasks.run' & t}</button-primary>
+      <button-primary type="submit" click.delegate="executeTask(task)" if.bind="selectedTask.name !== undefined">${'tasks.run' & t}</button-primary>
     </form>
     </div>
     <div id="tasks__output">
