remove browser detection

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
     <script>
       System.import('aurelia-bootstrapper');
       window.QLoadErrorTimeout = setTimeout(function() {
-        document.getElementById('q-load-error-message').insertAdjacentHTML('beforeend', 'This is taking way too long, are you using the latest version of Chrome?')
+        document.getElementById('q-load-error-message').insertAdjacentHTML('beforeend', 'This is taking way too long, are you using the latest version of your browser?')
       }, 3000)
     </script>
     <!-- BODY_END_MARKUP -->
