(schema-editor-array) only show add button if maxItems is not reached yet

--- a/client/src/elements/schema-editor/schema-editor-array.html
+++ b/client/src/elements/schema-editor/schema-editor-array.html
@@ -121,6 +121,7 @@
       class="schema-editor-array__button schema-editor-array__add-button"
       repeat.for="arrayEntryOption of arrayEntryOptions"
       click.delegate="addElement(arrayEntryOption.schema)"
+      if.bind="schema.maxItems === undefined || schema.maxItems > data.length"
     >
       ${'editor.arrayEntryAdd' & t: arrayEntryOption}
     </button-primary>
