fix schema-editor-object.css loading

--- a/client/src/elements/schema-editor/schema-editor-object.html
+++ b/client/src/elements/schema-editor/schema-editor-object.html
@@ -1,5 +1,5 @@
 <template style="display: block">
-  <require from="./schema-editor-object.css!"></require>
+  <require from="./schema-editor-object.css"></require>
   <require from="./schema-editor-wrapper"></require>
   <div class="schema-editor-object__header">
     <div
