(radio-button-group) fix matching of checked radio buttons by binding on model instead of value (to make sure types stay the same)

--- a/client/src/elements/molecules/radio-button-group.html
+++ b/client/src/elements/molecules/radio-button-group.html
@@ -5,9 +5,8 @@
       type="radio"
       name.bind="name"
       id="button-${name}-${option.value}"
-      value.bind="option.value"
+      model.bind="option.value"
       checked.bind="value"
-      matcher.bind="valueMatcher"
       input.delegate="change"
     />
     <label
