(exportable targets) add some hardcoded mockups for export dialog

--- a/client/src/pages/item-overview.html
+++ b/client/src/pages/item-overview.html
@@ -52,6 +52,10 @@
           <span t="item.delete"></span>
         </button-secondary>
 
+        <button-primary click.delegate="exportWithModal()">
+          <span>Für Print exportieren</span>
+        </button-secondary>
+
       </aside>
       <div>
   </main>
