(schema-editor-bbox) Implements a component to define a bounding box

--- a/client/src/elements/schema-editor/schema-editor-wrapper.html
+++ b/client/src/elements/schema-editor/schema-editor-wrapper.html
@@ -163,6 +163,18 @@
     ></schema-editor-geojson-point>
   </div>
 
+  <div if.bind="getType(schema) === 'bbox'" class="schema-editor-block">
+    <require from="./schema-editor-bbox"></require>
+    <schema-editor-bbox
+      schema.bind="schema"
+      data.two-way="data"
+      change.bind="change"
+      required.bind="required"
+      show-notifications.bind="showNotifications"
+      invalid.capture="showRequiredNotification()"
+    ></schema-editor-bbox>
+  </div>
+
   <div if.bind="getType(schema) === 'json'" class="schema-editor-block">
     <require from="./schema-editor-json"></require>
     <schema-editor-json
