(export dialog) add loading animation to preview

--- a/client/src/dialogs/export-dialog.html
+++ b/client/src/dialogs/export-dialog.html
@@ -35,6 +35,7 @@
           style="height: 500px;"
           rendering-info.bind="renderingInfo"
           target.bind="config.target.userExportable.previewTarget"
+          loading-status.bind="previewLoadingStatus"
         ></preview-container>
         <!-- <item-preview style="height: 500px;" target.bind="config.target.userExportable.previewTarget" id.bind="config.item.id"> -->
       </div>
