--- a/client/src/elements/atoms/icon-button.html
+++ b/client/src/elements/atoms/icon-button.html
@@ -1,10 +1,20 @@
 <template class="size-${size}">
   <require from="./icon-button.css"></require>
-  <button tabindex.bind="tabindex" type.bind="type" disabled.bind="disabled" click.trigger="click ? click() : true">
-    <span class="icon-button__icon" if.bind="code || icon">
-      <box-icon code.bind="code" icon.bind="icon" size="${iconSize || size}"></box-icon>
+  <button
+    tabindex.bind="tabindex"
+    type.bind="type"
+    disabled.bind="disabled || isLoading"
+    click.trigger="click ? click() : true"
+  >
+    <q-loader if.bind="isLoading" secondary.bind="secondaryLoader"></q-loader>
+    <span class="icon-button__icon" if.bind="(code || icon) && !isLoading">
+      <box-icon
+        code.bind="code"
+        icon.bind="icon"
+        size="${iconSize || size}"
+      ></box-icon>
     </span>
-    <span class="icon-button__text">
+    <span class="icon-button__text" css="${isLoading ? 'display: none;' : ''}">
       <slot></slot>
     </span>
   </button>
