(export) rename exportOptions to displayOptions

--- a/client/src/dialogs/export-dialog.html
+++ b/client/src/dialogs/export-dialog.html
@@ -22,7 +22,7 @@
           if.bind="schema"
           id="schema-editor--export"
           schema.bind="schema"
-          data.bind="exportOptions"
+          data.bind="displayOptions"
           show-notifications.bind="false"
           ,
           change.call="handleChange()"
