(schema-editor-color) show input as text input

--- a/client/src/elements/schema-editor/schema-editor-color.html
+++ b/client/src/elements/schema-editor/schema-editor-color.html
@@ -6,6 +6,6 @@
       <span>- </span>
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
     </span>
-    <input type="color" value.bind="data" required.bind="required" change.delegate="change() & debounce:500">
+    <input type="text" value.bind="data" required.bind="required" change.delegate="change() & debounce:500">
   </label>
 </template>
