Add ms login button

--- a/client/src/pages/login.html
+++ b/client/src/pages/login.html
@@ -1,24 +1,69 @@
 <template>
-	<main class="login-page" style="max-width: 500px; margin-left: auto; margin-right: auto; overflow-y: auto;">
-		<icon-logo style="width: 100px; height: 100px; margin: 50px auto 100px auto;"></icon-logo>
-		<form class="q-form">
-			<p class="q-text" if.bind="loginMessage" innerhtml.bind="loginMessage"></p>
-			<div class="q-form__block">
-				<label>
-					<span t="general.username"></span>
-					<input type="text" id="username" value.bind="username" ref="usernameInput" autocomplete="username">
-				</label>
-			</div>
-			<div class="q-form__block">
-				<label>
-					<span t="general.password"></span>
-					<input type="password" id="password" value.bind="password" autocomplete="current-password">
-				</label>
-			</div>
-			<p class="q-text q-text--error" if.bind="loginError">
-				${loginError}
-			</p>
-			<button-primary click.delegate="tryLogin()" type="submit"><span t="general.login"></span></button-primary>
-		</form>
-	</main>
+  <require from="./login.css"></require>
+
+  <main
+    class="login-page"
+    style="
+      max-width: 500px;
+      margin-left: auto;
+      margin-right: auto;
+      overflow-y: auto;
+    "
+  >
+    <icon-logo
+      style="width: 100px; height: 100px; margin: 50px auto 100px auto"
+    ></icon-logo>
+    <form class="q-form">
+      <p
+        class="q-text"
+        if.bind="loginMessage"
+        innerhtml.bind="loginMessage"
+      ></p>
+      <div class="q-form__block">
+        <label>
+          <span t="general.username"></span>
+          <input
+            type="text"
+            id="username"
+            value.bind="username"
+            ref="usernameInput"
+            autocomplete="username"
+          />
+        </label>
+      </div>
+      <div class="q-form__block">
+        <label>
+          <span t="general.password"></span>
+          <input
+            type="password"
+            id="password"
+            value.bind="password"
+            autocomplete="current-password"
+          />
+        </label>
+      </div>
+      <p class="q-text q-text--error" if.bind="loginError">${loginError}</p>
+      <button-primary click.delegate="tryLogin()" type="submit"
+        ><span t="general.login"></span
+      ></button-primary>
+      <!-- Microsoft Login-->
+      <div class="q-login__ms-login">
+        <label class="q-login__continue-with">
+          <h2>
+            <span t="general.orContinueWith"></span>
+          </h2>
+        </label>
+        <label class="q-login__ms-login-button">
+          <a href="https://edit-test.nzz-tech.ch/proxy/api/auth/azure/login">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path
+                d="M13.05,4.24L6.56,18.05L2,18L7.09,9.24L13.05,4.24M13.75,5.33L22,19.76H6.74L16.04,18.1L11.17,12.31L13.75,5.33Z"
+              ></path>
+            </svg>
+            <span t="general.mslogin"></span>
+          </a>
+        </label>
+      </div>
+    </form>
+  </main>
 </template>
